testsuite/tests/contrib/lkt_semantic/enum_subclasses/test.out
Resolving test.lkt
==================
Id   <RefId "EnClass" test.lkt:8:20-8:27>
     references <EnumClassDecl "EnClass" test.lkt:4:1-6:2>

Id   <RefId "SubclassB" test.lkt:8:28-8:37>
     references <EnumClassAltDecl "SubclassB" test.lkt:5:21-5:30>

Id   <RefId "EnClass" test.lkt:8:40-8:47>
     references <EnumClassDecl "EnClass" test.lkt:4:1-6:2>

Id   <RefId "SubclassB" test.lkt:8:48-8:57>
     references <EnumClassAltDecl "SubclassB" test.lkt:5:21-5:30>

Expr <CallExpr test.lkt:8:40-8:59>
     has type <EnumClassAltDecl "SubclassB" test.lkt:5:21-5:30>

test.lkt:10:32: error: Cannot find entity `SubclassB` in this scope
10 | @invalid val invalid_en_class: SubclassB = SubclassB()
   |                                ^^^^^^^^^

test.lkt:10:44: error: Cannot find entity `SubclassB` in this scope
10 | @invalid val invalid_en_class: SubclassB = SubclassB()
   |                                            ^^^^^^^^^

