testsuite/tests/contrib/lkt_semantic/enum_subclasses/test.lkt
# Test resolution of enum class subclasses (should be accessible via dot
# notation on the root enum class type).

enum class EnClass {
    case SubclassA, SubclassB, SubclassC
}

val en_class_inst: EnClass.SubclassB = EnClass.SubclassB()
# Test that those classes don't leak
@invalid val invalid_en_class: SubclassB = SubclassB()
